<resources>
    <string name="app_name">Colors</string>
    <string name="header_text_secondary">Add two hexadecimal characters between 0-9, A-F or a-f without the\'#\' for each channel</string>
    <string name="header_text_main">Create an RGB Color</string>
    <string name="create_button_text">CREATE RGB COLOR</string>
    <string name="created_color_text">This is your color</string>
    <string name="red_channel">Red Channel</string>
    <string name="blue_channel">Blue Channel</string>
    <string name="green_channel">Green Channel</string>
</resources>