<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
  >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/main_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:minHeight="40dp"
            android:text="@string/header_text_main"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/secondary_header"
            app:layout_constraintVertical_bias="-0.5"/>

        <TextView
            android:id="@+id/secondary_header"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/header_text_secondary"
            android:textStyle="bold"
            android:padding="5dp"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/Red_Channel"
            app:layout_constraintTop_toBottomOf="@id/main_header"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.1"
            />



        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintVertical_chainStyle="spread"
            android:layout_marginBottom="10dp"
            android:id="@+id/Red_Channel"
            android:layout_width="231dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/border"
            app:helperText="@string/red_channel"
            app:layout_constraintBottom_toTopOf="@id/Blue_Channel"
            app:layout_constraintTop_toBottomOf="@id/secondary_header"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="2"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/red_channel" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintVertical_chainStyle="spread"
            android:layout_marginBottom="10dp"
            android:id="@+id/Blue_Channel"
            android:layout_width="231dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/border"
            app:helperText="@string/blue_channel"
            app:layout_constraintBottom_toTopOf="@id/Green_Channel"
            app:layout_constraintTop_toBottomOf="@id/Red_Channel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="2"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/blue_channel" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintVertical_chainStyle="spread"
            android:layout_marginBottom="10dp"
            android:id="@+id/Green_Channel"
            android:layout_width="231dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/border"
            app:helperText="@string/green_channel"
            app:layout_constraintBottom_toTopOf="@id/Create_button"
            app:layout_constraintTop_toBottomOf="@id/Blue_Channel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" >


            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="2"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/green_channel" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Create_button"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_button_text"
            app:layout_constraintBottom_toTopOf="@id/color_display"
            app:layout_constraintTop_toBottomOf="@id/Green_Channel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
        <TextView
            android:id="@+id/color_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_color_text"
            android:background="@drawable/border"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Create_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>